--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,16 @@
+h1 {
+  display: flex;
+  justify-content: space-between;
+  /*margin: auto;*/
+}
 canvas {
-  margin-left: 200px;
+  margin-left: 450px;
+  margin-top: 50px;
+}
+
+#background {
+  width: 1000px;
+  height: 500px;
+  background-color: lightgray;
+  margin: auto;
 }
