--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,6 @@
 h1 {
-  display: flex;
-  justify-content: space-between;
-  /*margin: auto;*/
-}
-canvas {
-  margin-left: 450px;
-  margin-top: 50px;
+  font-family: sans-serif;
+  margin: auto;
 }
 
 #background {
@@ -15,8 +10,36 @@ canvas {
   margin: auto;
 }
 
+/*.entire-bar {
+  position: absolute;
+  margin-top: 200px;
+  margin-left: 320px;
+  z-index: 0;
+}*/
 
 img#bg {
     width: 1000px;
     height: 500px;
+}
+
+#success {
+  position: absolute;
+  margin-top: 250px;
+  margin-left: 450px;
+  font-size: 25px;
+}
+.entire-bar {
+    /* margin-left: 348px; */
+    /* margin-top: 302px; */
+    position: relative;
+    top: 300px;
+    left: 340px;
+}
+
+img#timing-bar {
+    width: 355px;
+    height: 30px;
+    position: absolute;
+    margin-left: 7px;
+    margin-top: 10px;
 }
