--- a/styles.css
+++ b/styles.css
@@ -37,9 +37,15 @@ img#bg {
 }
 
 img#timing-bar {
-    width: 355px;
-    height: 30px;
-    position: absolute;
-    margin-left: 7px;
-    margin-top: 10px;
+  width: 355px;
+  height: 30px;
+  position: absolute;
+  margin-left: -23px;
+  margin-top: 10px;
+}
+
+canvas#bar{
+  position: absolute;
+  z-index: 1;
+  margin-left: -30px;
 }
