--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: ka;
-  src: url(/Users/Ken/Desktop/a:A/javascript_project/big_fish/assets/fonts/ka1.ttf);
+  src: url(./assets/fonts/ka1.ttf);
 }
 
 .test {
